move viewchoicewrap to component and fix #116

--- a/app/public/src/sass/main.scss
+++ b/app/public/src/sass/main.scss
@@ -278,13 +278,11 @@ $top-height: 34rem;
 }
 
 .sticky {
-  @media (min-width: $media-m) {
-    z-index: 1001;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-  }
+  z-index: 1001;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
 }
 
